kubernetes/main/apps/monitoring/goldilocks/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "Goldilocks"
    hajimari.io/icon: mdi:align-vertical-top
    hajimari.io/group: "monitoring"
    hajimari.io/instance: "admin"
spec:
  hostnames: ["goldilocks.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          namespace: monitoring
          port: 80
